# coolingjacket

./: README.md  app.py  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: calc.py  config.py  fluid.py
tests/: test_export.py  test_fluid.py  test_halfpipe.py  test_i18n.py  test_i18n_fallback.py  test_logic.py
utils/: export.py  i18n.py
