[project]
name = "coolingjacket"
version = "0.1.0"
description = "Jacketed vessel thermal calculation app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.30.0",
  "numpy>=1.24.0",
  "plotly>=5.18.0",
  "scipy>=1.11.0",
  "xhtml2pdf>=0.2.11",
  "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
